
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int user_addr_t ;
struct user_iovec {int iov_len; int iov_base; } ;
struct user64_iovec {int iov_len; int iov_base; } ;
struct user32_iovec {int iov_len; int iov_base; } ;


 int UIO_USERSPACE64 ;
 int copyin (int ,struct user_iovec*,int) ;

int copyin_user_iovec_array(user_addr_t uaddr, int spacetype, int count, struct user_iovec *dst)
{
 size_t size_of_iovec = ( spacetype == UIO_USERSPACE64 ? sizeof(struct user64_iovec) : sizeof(struct user32_iovec));
 int error;
 int i;


 error = copyin(uaddr, dst, count * size_of_iovec);
 if (error)
  return (error);


 for (i = count - 1; i >= 0; i--) {
  if (spacetype == UIO_USERSPACE64) {
   struct user64_iovec iovec = ((struct user64_iovec *)dst)[i];
   dst[i].iov_base = iovec.iov_base;
   dst[i].iov_len = iovec.iov_len;
  } else {
   struct user32_iovec iovec = ((struct user32_iovec *)dst)[i];
   dst[i].iov_base = iovec.iov_base;
   dst[i].iov_len = iovec.iov_len;
  }
 }

 return (0);
}
